PR/45881: Chavdar Ivanov: nvi copy command copies empty lines. Move ENTIRE_LINE definition to common.h and have interested parties use it.